--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@fontsource/fira-mono": "^4.2.2",
     "@lukeed/uuid": "^2.0.0",
     "@svgdotjs/svg.js": "^3.1.1",
+    "@types/sizzle": "^2.3.3",
     "cookie": "^0.4.1",
     "jquery": "^3.2.1",
     "jquery-ui-dist": "^1.12.1",
