--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "jquery": "^3.2.1",
     "jquery-ui-dist": "^1.12.1",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "short-uuid": "^4.2.0",
     "sveltestrap": "^5.6.3"
   }
