--- a/package.json
+++ b/package.json
@@ -12,32 +12,34 @@
   },
   "devDependencies": {
     "@sveltejs/kit": "next",
-    "@types/cookie": "^0.4.0",
-    "@types/jquery": "^3.5.6",
+    "@types/async": "^3.2.8",
+    "@types/cookie": "^0.4.1",
+    "@types/jquery": "^3.5.7",
     "@types/jqueryui": "^1.12.16",
-    "@types/lodash": "^4.14.172",
-    "@typescript-eslint/eslint-plugin": "^4.19.0",
-    "@typescript-eslint/parser": "^4.19.0",
-    "eslint": "^7.22.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-svelte3": "^3.2.0",
-    "prettier": "~2.2.1",
-    "prettier-plugin-svelte": "^2.2.0",
-    "svelte": "^3.34.0",
-    "svelte-check": "^2.0.0",
-    "svelte-preprocess": "^4.0.0",
-    "tslib": "^2.0.0",
-    "typescript": "^4.0.0"
+    "@types/lodash": "^4.14.175",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "eslint": "^8.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-svelte3": "^3.2.1",
+    "prettier": "~2.4.1",
+    "prettier-plugin-svelte": "^2.4.0",
+    "svelte": "^3.44.0",
+    "svelte-check": "^2.2.7",
+    "svelte-preprocess": "^4.9.8",
+    "tslib": "^2.3.1",
+    "typescript": "^4.4.4"
   },
   "type": "module",
   "dependencies": {
-    "@fontsource/fira-mono": "^4.2.2",
+    "@fontsource/fira-mono": "^4.5.0",
     "@lukeed/uuid": "^2.0.0",
     "@svgdotjs/svg.js": "^3.1.1",
     "@types/sizzle": "^2.3.3",
+    "async": "^3.2.1",
     "buffer": "^6.0.3",
     "cookie": "^0.4.1",
-    "jquery": "^3.2.1",
+    "jquery": "^3.6.0",
     "jquery-ui-dist": "^1.12.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
