--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"lodash": "^4.17.21",
 		"moment": "^2.29.1",
 		"short-uuid": "^4.2.0",
+		"svelte-kit-cookie-session": "^1.3.3",
 		"sveltestrap": "^5.6.3"
 	}
 }
