--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 VITE_API_SERVER="http://localhost:5008"
 VITE_EMP_SERVER="http://localhost:3000"
+VITE_DEPLOY_MODE="private"
 VITE_CLIENT_ID=5645fb071f74cd8b4ea9
 VITE_CLIENT_SECRET=ca520dd60d83c6a031c6308cb0df360093533113
