--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
 		"@svgdotjs/svg.js": "^3.1.1",
 		"@types/sizzle": "^2.3.3",
 		"async": "^3.2.1",
+		"bootstrap": "^5.1.3",
+		"bootstrap-icons": "^1.7.1",
 		"buffer": "^6.0.3",
 		"cookie": "^0.4.1",
 		"jquery": "^3.6.0",
