--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"jquery-ui-dist": "^1.12.1",
 		"lodash": "^4.17.21",
 		"moment": "^2.29.1",
+		"sanitize-html": "^2.6.0",
 		"short-uuid": "^4.2.0",
 		"svelte-kit-cookie-session": "^1.3.3",
 		"sveltestrap": "^5.6.3"
