--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
+		"@sveltejs/adapter-node": "^1.0.0-next.55",
 		"@sveltejs/kit": "next",
 		"@types/async": "^3.2.8",
 		"@types/cookie": "^0.4.1",
