--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"sanitize-html": "^2.6.0",
 		"short-uuid": "^4.2.0",
 		"svelte-kit-cookie-session": "^1.3.3",
+		"svelte-notifications": "^0.9.91",
 		"sveltestrap": "^5.6.3"
 	}
 }
