--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"moment": "^2.29.1",
 		"sanitize-html": "^2.6.0",
 		"short-uuid": "^4.2.0",
+		"svelte-i18n": "^3.3.13",
 		"svelte-kit-cookie-session": "^1.3.3",
 		"svelte-notifications": "^0.9.91",
 		"sveltestrap": "^5.6.3"
