--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@sveltejs/kit": "next",
 		"@types/async": "^3.2.8",
 		"@types/cookie": "^0.4.1",
+		"@types/file-saver": "^2.0.5",
 		"@types/jquery": "^3.5.7",
 		"@types/jqueryui": "^1.12.16",
 		"@types/lodash": "^4.14.175",
@@ -42,6 +43,7 @@
 		"bootstrap-icons": "^1.7.1",
 		"buffer": "^6.0.3",
 		"cookie": "^0.4.1",
+		"file-saver": "^2.0.5",
 		"jquery": "^3.6.0",
 		"jquery-ui-dist": "^1.12.1",
 		"lodash": "^4.17.21",
