--- a/package.json
+++ b/package.json
@@ -1,62 +1,62 @@
 {
-  "name": "MetatoCome",
-  "version": "1.0.0",
-  "scripts": {
-    "dev": "cp dotEnv_dev .env; svelte-kit dev",
-    "build": "cp dotEnv_prd .env;  svelte-kit build; cp dotEnv_dev .env;",
-    "preview": "svelte-kit preview",
-    "check": "svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --ignore-path .gitignore  --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-    "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
-  },
-  "devDependencies": {
-    "@sveltejs/adapter-node": "^1.0.0-next.55",
-    "@sveltejs/kit": "next",
-    "@types/async": "^3.2.8",
-    "@types/cookie": "^0.4.1",
-    "@types/file-saver": "^2.0.5",
-    "@types/jquery": "^3.5.7",
-    "@types/jqueryui": "^1.12.16",
-    "@types/lodash": "^4.14.175",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-svelte3": "^3.2.1",
-    "node-sass": "^6.0.1",
-    "prettier": "~2.4.1",
-    "prettier-plugin-svelte": "^2.4.0",
-    "svelte": "^3.44.0",
-    "svelte-check": "^2.2.7",
-    "svelte-preprocess": "^4.9.8",
-    "tslib": "^2.3.1",
-    "typescript": "^4.4.4"
-  },
-  "type": "module",
-  "dependencies": {
-    "@lukeed/uuid": "^2.0.0",
-    "@svgdotjs/svg.js": "^3.1.1",
-    "@types/sizzle": "^2.3.3",
-    "async": "^3.2.1",
-    "bootstrap": "^5.1.3",
-    "bootstrap-icons": "^1.7.1",
-    "buffer": "^6.0.3",
-    "cookie": "^0.4.1",
-    "file-saver": "^2.0.5",
-    "filepond": "^4.30.3",
-    "filepond-plugin-image-exif-orientation": "^1.0.11",
-    "filepond-plugin-image-preview": "^4.6.10",
-    "jquery": "^3.6.0",
-    "jquery-ui-dist": "^1.12.1",
-    "lodash": "^4.17.21",
-    "moment": "^2.29.1",
-    "sanitize-html": "^2.6.0",
-    "short-uuid": "^4.2.0",
-    "svelte-filepond": "^0.2.0",
-    "svelte-i18n": "^3.3.13",
-    "svelte-kit-cookie-session": "^1.3.3",
-    "svelte-notifications": "^0.9.91",
-    "sveltestrap": "^5.6.3"
-  }
+	"name": "MetatoCome",
+	"version": "1.0.0",
+	"scripts": {
+		"dev": "cp dotEnv_dev .env; svelte-kit dev",
+		"build": "svelte-kit build;",
+		"preview": "svelte-kit preview",
+		"check": "svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "prettier --ignore-path .gitignore  --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
+		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
+	},
+	"devDependencies": {
+		"@sveltejs/adapter-node": "^1.0.0-next.55",
+		"@sveltejs/kit": "next",
+		"@types/async": "^3.2.8",
+		"@types/cookie": "^0.4.1",
+		"@types/file-saver": "^2.0.5",
+		"@types/jquery": "^3.5.7",
+		"@types/jqueryui": "^1.12.16",
+		"@types/lodash": "^4.14.175",
+		"@typescript-eslint/eslint-plugin": "^5.0.0",
+		"@typescript-eslint/parser": "^5.0.0",
+		"eslint": "^8.0.1",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-svelte3": "^3.2.1",
+		"node-sass": "^6.0.1",
+		"prettier": "~2.4.1",
+		"prettier-plugin-svelte": "^2.4.0",
+		"svelte": "^3.44.0",
+		"svelte-check": "^2.2.7",
+		"svelte-preprocess": "^4.9.8",
+		"tslib": "^2.3.1",
+		"typescript": "^4.4.4"
+	},
+	"type": "module",
+	"dependencies": {
+		"@lukeed/uuid": "^2.0.0",
+		"@svgdotjs/svg.js": "^3.1.1",
+		"@types/sizzle": "^2.3.3",
+		"async": "^3.2.1",
+		"bootstrap": "^5.1.3",
+		"bootstrap-icons": "^1.7.1",
+		"buffer": "^6.0.3",
+		"cookie": "^0.4.1",
+		"file-saver": "^2.0.5",
+		"filepond": "^4.30.3",
+		"filepond-plugin-image-exif-orientation": "^1.0.11",
+		"filepond-plugin-image-preview": "^4.6.10",
+		"jquery": "^3.6.0",
+		"jquery-ui-dist": "^1.12.1",
+		"lodash": "^4.17.21",
+		"moment": "^2.29.1",
+		"sanitize-html": "^2.6.0",
+		"short-uuid": "^4.2.0",
+		"svelte-filepond": "^0.2.0",
+		"svelte-i18n": "^3.3.13",
+		"svelte-kit-cookie-session": "^1.3.3",
+		"svelte-notifications": "^0.9.91",
+		"sveltestrap": "^5.6.3"
+	}
 }
