--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
 		"eslint": "^8.0.1",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
-		"node-sass": "^6.0.1",
+		"node-sass": "^7.0.1",
 		"prettier": "~2.4.1",
 		"prettier-plugin-svelte": "^2.4.0",
-		"svelte": "^3.44.0",
+		"svelte": "^3.47.0",
 		"svelte-check": "^2.2.7",
 		"svelte-preprocess": "^4.9.8",
 		"tslib": "^2.3.1",
@@ -48,6 +48,7 @@
 		"filepond": "^4.30.3",
 		"filepond-plugin-image-exif-orientation": "^1.0.11",
 		"filepond-plugin-image-preview": "^4.6.10",
+		"html2canvas": "^1.4.1",
 		"jquery": "^3.6.0",
 		"jquery-ui-dist": "^1.12.1",
 		"lodash": "^4.17.21",
@@ -57,7 +58,6 @@
 		"svelte-filepond": "^0.2.0",
 		"svelte-i18n": "^3.3.13",
 		"svelte-kit-cookie-session": "^1.3.3",
-		"svelte-notifications": "^0.9.91",
 		"sveltestrap": "^5.6.3"
 	}
 }
