--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,13 @@
 {
 	"useTabs": true,
 	"singleQuote": true,
-	"trailingComma": "none",
-	"printWidth": 100
+	"trailingComma": "all",
+	"printWidth": 100,
+	"htmlWhitespaceSensitivity": "ignore",
+	"vueIndentScriptAndStyle": true,
+	"embeddedLanguageFormatting": "auto",
+	"singleAttributePerLine": true,
+	"arrowParens": "always",
+	"semi": true,
+	"bracketSameLine": true
 }
