--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
 		"node-sass": "^7.0.1",
-		"prettier": "~2.4.1",
-		"prettier-plugin-svelte": "^2.4.0",
+		"prettier": "2.4.1",
+		"prettier-plugin-svelte": "^2.7.0",
 		"svelte": "^3.47.0",
 		"svelte-check": "^2.2.7",
 		"svelte-preprocess": "^4.9.8",
@@ -40,7 +40,7 @@
 		"@types/sizzle": "^2.3.3",
 		"async": "^3.2.1",
 		"bootstrap": "^5.1.3",
-		"bootstrap-icons": "^1.7.1",
+		"bootstrap-icons": "^1.8.2",
 		"buffer": "^6.0.3",
 		"cookie": "^0.4.1",
 		"dayjs": "^1.11.1",
