--- a/package.json
+++ b/package.json
@@ -15,14 +15,16 @@
 		"@sveltejs/kit": "next",
 		"@types/async": "^3.2.8",
 		"@types/blueimp-md5": "^2.18.0",
+		"@types/bootstrap": "^5.1.12",
 		"@types/cookie": "^0.4.1",
 		"@types/file-saver": "^2.0.5",
 		"@types/jquery": "^3.5.7",
 		"@types/jqueryui": "^1.12.16",
 		"@types/lodash": "^4.14.175",
-		"@typescript-eslint/eslint-plugin": "^5.0.0",
-		"@typescript-eslint/parser": "^5.0.0",
-		"eslint": "^8.0.1",
+		"@typescript-eslint/eslint-plugin": "^5.26.0",
+		"@typescript-eslint/parser": "^5.26.0",
+		"eslint": "^8.16.0",
+		"eslint-config-google": "^0.14.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
 		"node-sass": "^7.0.1",
