--- a/support/liuzijin.com/package.json
+++ b/support/liuzijin.com/package.json
@@ -47,6 +47,7 @@
 		"bootstrap-icons": "^1.8.2",
 		"buffer": "^6.0.3",
 		"cookie": "^0.4.1",
+		"d3-scale": "^4.0.2",
 		"dayjs": "^1.11.1",
 		"file-saver": "^2.0.5",
 		"filepond": "^4.30.3",
