--- a/support/xihuanwu.com/package.json
+++ b/support/xihuanwu.com/package.json
@@ -47,6 +47,7 @@
 		"bootstrap-icons": "^1.8.2",
 		"buffer": "^6.0.3",
 		"cookie": "^0.4.1",
+		"d3-scale": "^4.0.2",
 		"dayjs": "^1.11.1",
 		"file-saver": "^2.0.5",
 		"filepond": "^4.30.3",
@@ -56,6 +57,7 @@
 		"jquery-ui-dist": "^1.12.1",
 		"lodash": "^4.17.21",
 		"moment": "^2.29.1",
+		"node-cron": "^3.0.1",
 		"sanitize-html": "^2.6.0",
 		"short-uuid": "^4.2.0",
 		"svelte-filepond": "^0.2.0",
